# Emotibit_analysis

./: .gitignore  .pre-commit-config.yaml  DATA_STRUCTURE.md  README.md  dataAnalysis.ipynb  justfile  metadata.json  pyproject.toml  questions.md  requirements.txt  stat_test.py  wrist.py
src/: main.py
src/CS2/: doc.md  main.py
src/CS2/output/: emotibit_CS2_descriptive_stats.csv
src/MCI/: doc.md  generate_test_data.py  main.py
src/MCI/output/: mci_descriptive_stats.csv
src/MCI/scripts/: describe.py  load.py  parse.py  print_folder_structure.py  restructure_folder.py
src/analysis/: __init__.py  learning.md
src/analysis/outputs/: correlation_day1_p_values.csv  correlation_day1_r_values.csv  correlation_day2_p_values.csv  correlation_day2_r_values.csv  correlation_merged_data.csv  eda_inspection.xlsx  survey_results.xlsx
src/analysis/scripts/: __init__.py  compute_emotibit_des_stats.py  compute_stats.py  correlate.py  inspect_EDA.py  load_data.py  load_emotibit_data.py  parse_emotibit_data.py  parse_raw_data.py  visualize.py
src/code_examples/: HR.ipynb  emotibit_task_analysis.py  loading_data.py  wrist.py
src/data_structure/: doc.md  generate_meta_data.py  print_folder_structure.py  restructure_CS2_folder.py  restructure_MCI_folder.py  restructure_folder.py
src/data_structure/data/: folder_structure.txt
src/emotibit/: generate_test_data.py  main.py
src/emotibit/scripts/: describe.py  parse.py
src/scripts/: align.py  preprocess.py
src/survey/: analyze_survey.py
